--- a/gradle.properties
+++ b/gradle.properties
@@ -3,15 +3,14 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/use
-	minecraft_version=1.16.1
-	yarn_mappings=1.16.1+build.1
-	loader_version=0.8.8+build.202
+	minecraft_version=1.16.3
+	yarn_mappings=1.16.3+build.30
+	loader_version=0.10.1+build.209
+
+	#Fabric api
+	fabric_version=0.23.0+build.410-1.16
 
 # Mod Properties
 	mod_version = 1.0.0
 	maven_group = net.fabricmc
 	archives_base_name = fabric-example-mod
-
-# Dependencies
-	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-	fabric_version=0.13.1+build.370-1.16
